// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MessageItem when content is defined matches snapshot 1`] = `
<tr>
  <td
    style={
      Object {
        "width": 200,
      }
    }
  >
    mocked date
  </td>
  <td
    style={
      Object {
        "width": 150,
      }
    }
  >
    2
  </td>
  <td
    style={
      Object {
        "width": 100,
      }
    }
  >
    1
  </td>
  <td
    style={
      Object {
        "wordBreak": "break-word",
      }
    }
  >
    <JSONViewer
      data={
        Object {
          "foo": "bar",
          "key": "val",
        }
      }
    />
  </td>
  <td
    className="has-text-right"
  >
    <Dropdown
      label={
        <span
          className="icon"
        >
          <i
            className="fas fa-cog"
          />
        </span>
      }
      right={true}
    >
      <DropdownItem
        onClick={[Function]}
      >
        Copy to clipboard
      </DropdownItem>
      <DropdownItem
        onClick={[Function]}
      >
        Save as a file
      </DropdownItem>
    </Dropdown>
  </td>
</tr>
`;

exports[`MessageItem when content is undefined matches snapshot 1`] = `
<tr>
  <td
    style={
      Object {
        "width": 200,
      }
    }
  >
    mocked date
  </td>
  <td
    style={
      Object {
        "width": 150,
      }
    }
  >
    20
  </td>
  <td
    style={
      Object {
        "width": 100,
      }
    }
  >
    2
  </td>
  <td
    style={
      Object {
        "wordBreak": "break-word",
      }
    }
  />
  <td
    className="has-text-right"
  >
    <Dropdown
      label={
        <span
          className="icon"
        >
          <i
            className="fas fa-cog"
          />
        </span>
      }
      right={true}
    >
      <DropdownItem
        onClick={[Function]}
      >
        Copy to clipboard
      </DropdownItem>
      <DropdownItem
        onClick={[Function]}
      >
        Save as a file
      </DropdownItem>
    </Dropdown>
  </td>
</tr>
`;
